--- a/css/index.css
+++ b/css/index.css
@@ -26,10 +26,13 @@ img {
   height: 150px;
 }
 
+
 div {
   text-align: center;
   border: 5px;
 }
+
+/* NavBar------------> */
 
 nav ul {
   list-style: none;
@@ -60,14 +63,16 @@ nav ul li a:hover {
   font-weight: 400;
 }
 
+/* Headings-------->*/
+
 h2 {
-    text-align: center;
-    margin: 4rem 0 0 0;
-  }
+  text-align: center;
+  margin: 4rem 0 0 0;
+}
 
 h4 {
   text-align: center;
-  margin: 1rem 0 2rem 0 ;
+  margin: 1rem 0 2rem 0;
 }
 
 h3 {
@@ -93,6 +98,8 @@ footer {
   margin-top: 5rem;
 }
 
+/* Header classes ------>*/
+
 .laddle {
   height: 50px;
   width: 60px;
@@ -109,12 +116,16 @@ footer {
   flex-direction: row;
 }
 
+
+
+/* About------>*/
+
 .about {
   height: auto;
   margin: 10 0px 15px 15px 15px;
   display: flex;
   flex-direction: column;
- align-content: space-around;
+  align-content: space-around;
 }
 
 .myButton {
@@ -147,6 +158,7 @@ footer {
   font-weight: 400;
   padding: 0.2rem;
 }
+
 .myButton:hover {
   background: linear-gradient(
     to bottom,
@@ -155,16 +167,19 @@ footer {
   );
   background-color: #bab1ba;
 }
+
 .myButton:active {
   position: relative;
   top: 1px;
 }
 
 .about img {
-  width: 50%;
-  height: 50%;
+  width: 45%;
+  height: 45%;
   margin: auto;
 }
+
+/*Main ------>*/
 
 .category {
   display: flex;
@@ -172,8 +187,21 @@ footer {
   align-items: center;
   width: 80%;
   margin: auto;
-  height: 50vh;
+  height: 80vh;
 }
+
+
+
+.category img:hover {
+  width: 300px;
+  height: 200px;
+ 
+  
+}
+
+
+
+
 .logo {
   width: 8%;
   height: 8%;
@@ -186,13 +214,42 @@ footer {
   background-color: rgba(255, 250, 250, 0.8);
 }
 
+.cakes img:hover ~ p {
+  font-size: 20px;
+  font-weight: 600;
+  background-color: rgba(32, 168, 148, 0.85);
+  color: rgba(255, 250, 250);
+  text-shadow: 1px 1px 5px rgba(32, 168, 148, 1);
+  border-radius: 1%;
+}
+
 .pastries {
   background-color: rgba(225, 133, 179, 0.5);
+}
+
+.pastries img:hover ~ p {
+  font-size: 20px;
+  font-weight: 600;
+  background-color: rgba(225, 133, 179,0.5);
+  color: rgba(255, 250, 250);
+  text-shadow: 10px 10px 10px black;
+  border-radius: 1%;
 }
 
 .glutenf {
   background-color: rgb(225, 133, 179);
 }
+
+.glutenf img:hover ~ p {
+  font-size: 20px;
+  font-weight: 600;
+  background-color: rgb(219, 89, 154, 0.5);
+  color: rgba(255, 250, 250);
+  text-shadow: 10px 10px 10px black;
+  border-radius: 1%;
+}
+
+/*----> Footer*/
 
 .top {
   width: 5vw;
