--- a/css/index.css
+++ b/css/index.css
@@ -76,9 +76,14 @@ h4 {
 }
 
 h3 {
-  padding: 1rem;
+ 
   text-align: center;
-  margin-top: 7rem;
+  margin-top: 9rem;
+  font-family: atocha, sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 35px;
+  
 }
 
 h1 {
@@ -95,7 +100,7 @@ span {
 
 footer {
   text-align: center;
-  margin-top: 5rem;
+  margin-top: 8rem;
 }
 
 /* Header classes ------>*/
@@ -184,6 +189,7 @@ footer {
 .category {
   display: flex;
   justify-content: space-around;
+  align-content: space-around;
   align-items: center;
   width: 80%;
   margin: auto;
@@ -193,13 +199,11 @@ footer {
 
 
 .category img:hover {
-  width: 300px;
-  height: 200px;
+  width: 75%;
+  height: 75%;
  
   
 }
-
-
 
 
 .logo {
@@ -212,7 +216,7 @@ footer {
 
 .cakes {
   background-color: rgba(255, 250, 250, 0.8);
-}
+ }
 
 .cakes img:hover ~ p {
   font-size: 20px;
