--- a/css/index.css
+++ b/css/index.css
@@ -91,8 +91,7 @@ h1 {
   font-style: normal;
   font-weight: 400;
   font-size: 40px;
-  margin-top: 1.2rem;
-}
+ }
 
 span {
   color: teal;
@@ -119,6 +118,16 @@ footer {
 .brand-name {
   display: flex;
   flex-direction: row;
+}
+
+.brand-name h1 img {
+  width: 50px;
+  height: 50px;
+}
+
+.brand-name h1 img:hover {
+  transform: rotate(-15deg);
+  
 }
 
 
