--- a/css/index.css
+++ b/css/index.css
@@ -102,7 +102,11 @@ footer {
   margin-top: 8rem;
 }
 
-/* Header classes ------>*/
+
+
+/*Classes*/
+
+/* Header section ------>*/
 
 .laddle {
   height: 50px;
@@ -127,12 +131,13 @@ footer {
 
 .brand-name h1 img:hover {
   transform: rotate(-15deg);
-  
+  border-radius: 50%;
+background-color: rgba(32, 168, 148, 0.3);  
 }
 
 
 
-/* About------>*/
+/* About section------>*/
 
 .about {
   height: auto;
@@ -195,7 +200,7 @@ footer {
 }
 
 
-/*Main ------>*/
+/*Main section ------>*/
 
 .category {
   display: flex;
