--- a/css/index.css
+++ b/css/index.css
@@ -197,7 +197,7 @@ footer {
   justify-content: space-around;
   width: 80%;
   margin: auto;
-  height: auto;
+
 }
 
 .category img:hover {
@@ -219,6 +219,8 @@ footer {
 
 .cakes {
   background-color: rgba(255, 250, 250, 0.8);
+  height: auto;
+ 
 }
 
 .cakes img:hover ~ p {
@@ -232,6 +234,8 @@ footer {
 
 .pastries {
   background-color: rgba(225, 133, 179, 0.5);
+  min-height: 50vh;
+  align-items: center;
 }
 
 .pastries img:hover ~ p {
@@ -245,6 +249,8 @@ footer {
 
 .glutenf {
   background-color: rgb(225, 133, 179);
+  min-height: 80vh;
+  align-items: center;
 }
 
 .glutenf img:hover ~ p {
@@ -261,4 +267,8 @@ footer {
 .top {
   width: 5vw;
   height: 5vw;
+}
+
+.credits {
+  font-size: 12px;
 }
