--- a/css/index.css
+++ b/css/index.css
@@ -49,6 +49,8 @@ nav ul li:hover {
   background-color: rgba(225, 133, 179, 0.5);
   border-radius: 45%;
   font-weight: 750;
+ /*box-shadow: 0 3px 6px 0 rgba(225, 13, 80, 0.05), 0 3px 6px 0 rgba(12, 90, 80, 0.3);*/
+ 
 }
 
 nav ul li a {
@@ -58,8 +60,9 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  color: rgb(12, 90, 80);
-  font-weight: 400;
+  color: rgb(27, 134, 134);
+  font-weight: 500;
+
 }
 
 /* Headings-------->*/
@@ -127,6 +130,7 @@ footer {
   transform: rotate(-15deg);
   border-radius: 50%;
   background-color: rgba(32, 168, 148, 0.3);
+  
 }
 
 /* About section------>*/
@@ -205,7 +209,7 @@ footer {
   height: 75%;
 }
 
-.column {
+.row {
   width: 33%;
 }
 
