--- a/css/index.css
+++ b/css/index.css
@@ -219,10 +219,7 @@ footer {
   width: 8%;
   height: 8%;
   transform: rotate(-10deg);
-  border-radius: 50%;
-  box-shadow: 1px 1px 10px rgba(255, 250, 250), 3px 3px 20px rgb(106, 210, 226);
-  /* float: right;
-    margin: 2vw ;*/
+  
 }
 
 
@@ -251,6 +248,14 @@ footer {
 
 .discount {
   background-color: rgba(32, 168, 148, 0.25);
+}
+
+.low {
+  background-color: rgba(255,160,137,0.5);
+}
+
+.out {
+display: none;
 }
 
 
