--- a/css/index.css
+++ b/css/index.css
@@ -93,14 +93,19 @@ h1 {
   font-size: 40px;
 }
 
-span {
-  color: teal;
-}
 
 footer {
   text-align: center;
   margin-top: 8rem;
 }
+
+span {
+  font-family: atocha;
+  font-size: 1.6rem;
+  font-stretch: ultra-expanded;
+}
+
+
 
 /*Classes*/
 
@@ -131,6 +136,11 @@ footer {
   border-radius: 50%;
   background-color: rgba(32, 168, 148, 0.3);
   
+}
+
+.brand-name span {
+  color: teal;
+  font-size: inherit;
 }
 
 /* About section------>*/
@@ -213,6 +223,7 @@ footer {
 
 .product {
   width: 33%;
+  margin: 15px 0;
 }
 
 .product img {
@@ -235,7 +246,7 @@ footer {
 
 
 .pastries {
-  background-color: rgba(225, 133, 179, 0.5);
+  background-color: rgba(224, 155, 220, 0.5);
   min-height: 60vh;
   align-items: center;
     
@@ -244,26 +255,31 @@ footer {
 
 
 .glutenf {
-  background-color: rgb(225, 133, 179);
+  background-color: rgba(247, 175, 204, 0.8);
   min-height: 80vh;
   align-items: center;
 }
 
 
 .discount img {
-  background-color: rgba(32, 168, 148, 0.25);
+  background-color: rgba(32, 168, 148, 0.3);
   border-radius: 15% 40%;
+}
+
+.discount span {
+  color: rgb(26, 122, 109);
 }
 
 
 .low img {
   
-  background-color: rgba(255,160,137,0.5);
+  background-color: rgb(224, 83, 101, 0.3);;
   border-radius:  40% 15%;
 }
 
 .low span {
-  color: indigo
+  
+  color: rgb(224, 67, 88);
 }
 
 
