--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ header {
   display: flex;
   justify-content: space-between;
   background-color: rgb(255, 250, 250);
-  padding: 0.5rem;
+  padding: 1rem;
 }
 
 img {
@@ -49,8 +49,7 @@ nav ul li:hover {
   background-color: rgba(225, 133, 179, 0.5);
   border-radius: 45%;
   font-weight: 750;
- /*box-shadow: 0 3px 6px 0 rgba(225, 13, 80, 0.05), 0 3px 6px 0 rgba(12, 90, 80, 0.3);*/
- 
+  /*box-shadow: 0 3px 6px 0 rgba(225, 13, 80, 0.05), 0 3px 6px 0 rgba(12, 90, 80, 0.3);*/
 }
 
 nav ul li a {
@@ -62,19 +61,22 @@ nav ul li a {
 nav ul li a:hover {
   color: rgb(27, 134, 134);
   font-weight: 500;
+}
 
+nav ul span {
+  font-family: open sans;
 }
 
 /* Headings-------->*/
 
 h2 {
   text-align: center;
-  margin: 4rem 0 0 0;
+  margin: 4rem 2rem 0 2rem;
 }
 
 h4 {
   text-align: center;
-  margin: 1rem 0 2rem 0;
+  margin: 1rem 2rem 2rem 2rem;
 }
 
 h3 {
@@ -93,7 +95,6 @@ h1 {
   font-size: 40px;
 }
 
-
 footer {
   text-align: center;
   margin-top: 8rem;
@@ -104,8 +105,6 @@ span {
   font-size: 1.6rem;
   font-stretch: ultra-expanded;
 }
-
-
 
 /*Classes*/
 
@@ -135,7 +134,6 @@ span {
   transform: rotate(-15deg);
   border-radius: 50%;
   background-color: rgba(32, 168, 148, 0.3);
-  
 }
 
 .brand-name span {
@@ -194,14 +192,21 @@ span {
   background: linear-gradient(
     to bottom,
     rgba(225, 133, 179, 0.6) 5%,
-    #ededed 100%
+    #ededed 40%
   );
   background-color: #bab1ba;
 }
 
 .myButton:active {
-  position: relative;
-  top: 1px;
+  /* position: relative;
+  top: 2px; */
+  background: linear-gradient(
+    to bottom,
+    rgba(225, 133, 179, 0.6) 5%,
+    #ededed 100%
+  );
+  background-color: #bab1ba;
+  transform: translateY(-5px)
 }
 
 /*Main section ------>*/
@@ -213,11 +218,9 @@ span {
   width: 80%;
   margin: auto;
   padding: 2.5rem 1rem;
-
 }
 
 .category img:hover {
-
   transform: scale(120%);
 }
 
@@ -234,32 +237,24 @@ span {
   width: 8%;
   height: 8%;
   transform: rotate(-10deg);
-  
 }
-
 
 .cakes {
   background-color: rgba(255, 250, 250, 0.8);
   height: auto;
- 
 }
-
 
 .pastries {
-  background-color: rgba(224, 155, 220, 0.5);
-  min-height: 60vh;
+  background-color: rgba(225, 133, 179, 0.658);
+  /* min-height: 60vh; */
   align-items: center;
-    
 }
-
-
 
 .glutenf {
-  background-color: rgba(247, 175, 204, 0.8);
-  min-height: 80vh;
+  background-color: rgba(225, 133, 179, 0.863);
+  /* min-height: 80vh; */
   align-items: center;
 }
-
 
 .discount img {
   background-color: rgba(32, 168, 148, 0.3);
@@ -270,26 +265,18 @@ span {
   color: rgb(26, 122, 109);
 }
 
-
 .low img {
-  
-  background-color: rgb(224, 83, 101, 0.3);;
-  border-radius:  40% 15%;
+  background-color: rgb(224, 83, 101, 0.3);
+  border-radius: 40% 15%;
 }
 
 .low span {
-  
   color: rgb(224, 67, 88);
 }
 
-
-
 .out {
-display: none;
+  display: none;
 }
-
-
-
 
 /*----> Footer*/
 
@@ -302,9 +289,56 @@ display: none;
   font-size: 12px;
 }
 
+@media (max-width: 992px) {
+  header {
+    flex-direction: column;
+    padding: 10px;
+    align-items: center;
+  }
 
-/*
-@media (max-width: 600px) {
+  header nav ul {
+    align-self: center;
+  }
 
-  
-*/
+  h1 {
+    margin: 10px 0 0 0;
+  }
+
+  ul {
+    padding: 0;
+  }
+
+  img {
+    width: 50%;
+    height: auto;
+  }
+
+  .category {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about img {
+    width: 80%;
+  }
+
+  .product {
+    width: 100%;
+  }
+
+  .logo {
+    width: 12%;
+    height: 12%;
+  }
+}
+
+@media (max-width: 425px) {
+  header nav ul span {
+    display: block;
+  }
+
+  .top {
+    width: 10vw;
+    height: 10vw;
+  }
+}
