--- a/css/index.css
+++ b/css/index.css
@@ -240,18 +240,18 @@ span {
 }
 
 .cakes {
-  background-color: rgba(255, 250, 250, 0.8);
+  background-color: rgba(255, 250, 250, 1);
   height: auto;
 }
 
 .pastries {
-  background-color: rgba(225, 133, 179, 0.658);
+  background-color: rgb(245, 218, 245, 0.9);
   /* min-height: 60vh; */
   align-items: center;
 }
 
 .glutenf {
-  background-color: rgba(225, 133, 179, 0.863);
+  background-color: 	rgba(211, 168, 190, 0.9);
   /* min-height: 80vh; */
   align-items: center;
 }
@@ -287,6 +287,27 @@ span {
 
 .credits {
   font-size: 12px;
+}
+
+.button-discount-first{
+  position:fixed; 
+  right: 5px; 
+  bottom: 5px; 
+  border-radius: 50px 25px; 
+  width: 100px; 
+  height: 40px;
+  background-color: rgba(243, 219, 231, 0.5);
+  
+}
+
+.button-availability-first{
+  position:fixed; 
+  right: 5px; 
+  bottom: 55px; 
+  border-radius: 50px 25px; 
+  width: 100px; 
+  height: 40px;
+  background-color: rgba(243, 219, 231, 0.5);
 }
 
 @media (max-width: 992px) {
